# oop-microwave

./: .gitignore  README.md  meson.build
assets/models/: triangle.vs
assets/models/microwave/: microwave.gltf
assets/models/microwave_door/: microwave_door.gltf
assets/shaders/: triangle.fs  triangle.vs
assets/world/: camera.vs
include/: base_state.h  base_unique_singleton.h  clock.h  clock_context.h  config.h  context.h  gl_common.h  interface_microwave_ui.h  interface_observable.h  interface_observer.h  logger.h  microwave_application.h  microwave_application_builder.h  microwave_countdown.h  microwave_gl_application.h  microwave_ui.h  state_context.h  state_cooking.h  state_door_closed.h  state_door_opened.h
include/microwave/: base_state.h  base_unique_singleton.h  clock.h  clock_context.h  logger.h  microwave_application_builder.h  microwave_countdown.h  microwave_gl_application.h  microwave_ui.h  state_context.h  state_cooking.h  state_door_closed.h  state_door_opened.h
include/microwave/app_impl/: app_gl.h  builder.h  gl_camera.h  gl_material.h  gl_model.h  impl_gl.h
include/microwave/base_type/: singleton.h  state.h
include/microwave/context/: clock.h  countdown.h  state.h
include/microwave/debug/: logger.h
include/microwave/entity/: clock.h  gl_window.h
include/microwave/interface/: application.h  camera.h  material.h  microwave.h  model.h  observable.h  observer.h  ui.h  window.h
include/microwave/interfaces/: interface_microwave_application.h  interface_observable.h
include/microwave/material/: camera_view.h  triangle.h
include/microwave/model/: triangle.h
include/microwave/state/: cooking.h  door_closed.h  door_opened.h
include/microwave/ui/: microwave_control.h  microwave_gl_scene.h
src/: base_state.cpp  clock.cpp  clock_context.cpp  context.cpp  main.cpp  microwave_application.cpp  microwave_application_builder.cpp  microwave_countdown.cpp  microwave_gl_application.cpp  microwave_ui.cpp  oop_microwave.cpp  state_context.cpp  state_cooking.cpp  state_door_closed.cpp  state_door_opened.cpp
src/app_impl/: app_gl.cpp  builder.cpp  gl_camera.cpp  gl_material.cpp  gl_model.cpp  impl_gl.cpp
src/base_type/: state.cpp
src/context/: clock.cpp  countdown.cpp  state.cpp
src/entity/: clock.cpp  gl_window.cpp
src/material/: camera_view.cpp  triangle.cpp
src/model/: triangle.cpp
src/state/: cooking.cpp  door_closed.cpp  door_opened.cpp
src/ui/: microwave_control.cpp  microwave_gl_scene.cpp
